# DisaVu

./: LICENSE.txt  README.md
app/: .eslintrc.js  .gitignore  README.md  deploy.sh  package.json  tsconfig.json  vue.config.js
app/public/: disaster-zones.json  index.html
app/src/: App.vue  main.ts  shims-tsx.d.ts  shims-vue.d.ts  shims-vuetify.d.ts  shims-wicket.d.ts
app/src/models/: index.ts
app/src/modules/: utils.ts
app/src/plugins/: leaflet.ts  vue-class-component.ts  vuetify.ts
app/src/router/: index.ts  outgoing.ts
app/src/store/: app.ts  index.ts  settings.ts  test-polygon-data.ts
app/src/styles/: app.scss  variables.scss
data_gen/: env.yml
data_gen/prepare_inference/: create_tiles.py  split_geotifs_by_band.py
data_gen/stage_1/: generate_stage_1_data.py
data_gen/stage_2/: generate_data.py
docker/: conda-env.yml  pip_components.txt
docker/postprocess_combined/: preprocess_geotiff.py
docker/stage_1_process/: generate_stage_1_data.py  newcondaenv.yml  readme.md
docker/stage_2_process/: generate_data.py  readme.md
geoserv/: .gitignore  .rustfmt.toml  Cargo.toml  README.md
geoserv/src/: api.rs  geodata.rs  kdbush.rs  lib.rs  main.rs
helpers/: filter_amenities.py  generate_stage_1_data.py  post_process.py  preprocess_train.py  readme.md  things.py  tif2band.py
ml/: README.md
ml/python_package/: README.md
nbs/: inference.ipynb  ml_env_sagemaker.yml  stage_1_building_detect.ipynb  stage_2_building_damage.ipynb
xview2_feature_extractor/: Cargo.toml  README.md
xview2_feature_extractor/src/: main.rs
(+8 files in other folders)
