[package]
name = "geoserv"
authors = ["Rico A. Beti <rico.beti@silentbyte.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.5.4"
actix-web = "3.3.3"
anyhow = "1.0.52"
argh = "0.1.7"
env_logger = "0.9.0"
geojson = "0.22.2"
glob = "0.3.0"
itertools = "0.10.3"
log = "0.4.14"
serde = "1.0.134"
serde_json = "1.0.75"

# [profile.release]
# lto = true
